<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Parent Bank</string>
    <string name="child_name_hint">Enter a child\'s name</string>
    <string name="button_add_child">Add Child</string>
    <string name="child_entry_default_text">Child entry</string>
    <string name="add_child">Add Child&#8230;</string>
    <string name="prompter">Children: (add from menu)</string>
    <string name="title_bank_of_dad">Parent Bank</string>
    <string name="empty_child_name">ChildName</string>
    <string name="empty_child_balance">balance</string>
    <string name="default_item_text">Enter a description here</string>
    <string name="default_date_text">1/1/2014</string>
    <string name="default_amount_text">Enter amount</string>
    <string name="button_add_transaction">Add&#8230;</string>
    <string name="amount_prompt">Amount:</string>
    <string name="date_prompt">Date:</string>
    <string name="button_earned">Earned</string>
    <string name="button_spent">Spent</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="preference_file_key">org.jmicco.allowanceapp.PREERENCE_FILE_KEY</string>
    <string name="preferences">Preferences</string>
    <string name="connect_online">Share accounts online</string>
    <string name="connect_error">Unable to connect</string>
</resources>
