<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<LinearLayout
        android:id="@+id/child_new_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/date_prompt" ></TextView>
      <Button
          android:id="@+id/transaction_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="left"
          android:layout_weight="2"
          android:onClick="showDatePickerDialog" />
       <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/amount_prompt" ></TextView>
      <EditText
          android:id="@+id/transaction_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="numberSigned"
          android:layout_gravity="right"
          android:layout_weight="1"
          android:hint="@string/default_amount_text"></EditText>
    </LinearLayout>    
    <EditText
          android:id="@+id/transaction_item"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/child_new_transaction"
          android:singleLine="false"
          android:hint="@string/default_item_text"></EditText>

      <Button
          android:id="@+id/earned"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignBaseline="@+id/spent"
          android:layout_alignBottom="@+id/spent"
          android:layout_marginRight="28dp"
          android:layout_toLeftOf="@+id/spent"
          android:onClick="earnMoney"
          android:text="@string/button_earned" />

      <Button
          android:id="@+id/spent"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/transaction_item"
          android:layout_marginRight="87dp"
          android:onClick="spendMoney"
          android:text="@string/button_spent" />

</RelativeLayout>
