<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/child_new_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_prompt" >
        </TextView>

        <Button
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:onClick="showDatePickerDialog" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount_prompt" >
        </TextView>

        <EditText
            android:id="@+id/transaction_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:hint="@string/default_amount_text"
            android:inputType="numberSigned" >
        </EditText>
    </LinearLayout>

    <EditText
        android:id="@+id/transaction_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/child_new_transaction"
        android:hint="@string/default_item_text"
        android:singleLine="false" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/transaction_item"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="deleteTransaction"
            android:text="@string/button_delete"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveTransaction"
            android:text="@string/button_save"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>