<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp" >
    <LinearLayout
    android:id="@+id/date_amount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <TextView
            android:id="@+id/date"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" 
            android:text="@string/default_date_text" />
    <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:text="@string/default_amount_text" />
    </LinearLayout>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_amount"
        android:text = "@string/default_item_text" />

</RelativeLayout>
