<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChildTransactionActivity" >
    
    <LinearLayout
        android:id="@+id/child_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView 
        android:id="@+id/child_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_weight="2"
        android:text="@string/empty_child_name"
        android:textSize="24sp"
        />
      <TextView 
        android:id="@+id/child_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:text="@string/empty_child_balance"
        android:textSize="24sp"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/child_new_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/child_info" >
      <EditText
          android:id="@+id/transaction_date"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="date"
          android:hint="@string/default_date_text"></EditText>
      <EditText
          android:id="@+id/transaction_item"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/default_item_text"></EditText>
      <EditText
          android:id="@+id/transaction_amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:inputType="numberSigned"
          android:hint="@string/default_amount_text"></EditText>
    </LinearLayout>    
    <ListView 
        android:id="@+id/transaction_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/child_new_transaction"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />
    

</RelativeLayout>
